Refactored index binary objects.